# atomiclm

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS
notebooks/: basic_tokenizer.ipynb  gqa_explained.ipynb  rope_explained.ipynb  tokenizer_special_tokens.ipynb  tokenizer_tiktoken.ipynb
scripts/: generate.py  pretrain.py  train_tokenizer.py
src/atomiclm/: utils.py
src/atomiclm/model/: __init__.py  attention.py  block.py  decoder.py  feedforward.py  norm.py  rope.py
src/atomiclm/tokenizer/: __init__.py  base.py  bpe_ops.py  constants.py  patterns.py  tokenizer.py
src/atomiclm/training/: __init__.py  checkpoint.py  config.py  data.py  train.py
tests/: test_attention.py  test_block.py  test_decoder.py  test_feedforward.py  test_norm.py  test_rope.py  test_tokenizer.py  test_training.py
